fix: [780] fixed beta bar contrast issues

--- a/web/styles/njwds-overrides/overrides.scss
+++ b/web/styles/njwds-overrides/overrides.scss
@@ -6,6 +6,10 @@
   min-height: 40rem;
 }
 
+.usa-link {
+  color: $primary !important;
+}
+
 .usa-prose > p,
 p {
   max-width: unset !important;
